Change /hosting/pages/feed/index.html import

--- a/hosting/pages/feed/index.html
+++ b/hosting/pages/feed/index.html
@@ -116,6 +116,7 @@
                     Blair 看了 鈴芽之旅 已觀看 50 %
                 </div>
             </div>
+            
             <div class="bg-[#7EB3BF] rounded-lg col-span-2 grid grid-cols-3 gap-4 px-6 py-4 ml-20">
                 <img class="object-contain rounded-lg m-4"
                      src="https://cdn.shopify.com/s/files/1/0613/7030/2681/products/212206efffac7d87f8d2a9dc50933b82_473x637.png?v=1672105246"
@@ -137,7 +138,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-row gap-4 ml-20">
+            <div class="flex flex-row gap-4 relative text-justify">
                 <div class="flex flex-row gap-4">
                     <span class="material-symbols-outlined">
                     favorite
