Change /hosting/pages/Profile/index.html import

--- a/hosting/pages/Profile/index.html
+++ b/hosting/pages/Profile/index.html
@@ -174,13 +174,13 @@
       <div class="flex flex-col w-[82.55%] relative grow mt-[37.5px] mr-[12.45%] mb-[22.5px] ml-[5%]">
         <div class="flex flex-col w-[85.95%] relative mt-0 mr-[14.05%] mb-0 ml-0">
           <div class="flex items-center relative">
-            <div class="flex flex-col relative basis-12">
-              <img src="https://xsgames.co/randomusers/avatar.php?g=male" alt="alt text" class="w-12 h-auto aspect-[1] align-top object-cover rounded-full object-[center_center] relative min-w-[48px] mt-[3.5px] mx-0 mb-0"/>
+            <div id="reading_book_progress_profile_picture" class="flex flex-col relative basis-12">
+              <!-- 自動加載 個人頭像 -->
             </div>
             <div class="basis-[22px]"></div>
             <div class="flex flex-col relative basis-[167px]">
-              <h3 class="flex items-center font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px] relative">
-                Loren
+              <h3 id="reading_book_progress_profile_name" class="flex items-center font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px] relative">
+                <!-- 自動加載 個人名字 -->
               </h3>
               <div
                 class="flex items-center font-normal text-[14px] leading-[1.35] font-NotoSans text-black tracking-[0px] relative mt-[2.5px] mx-0 mb-0"
@@ -189,10 +189,8 @@
               </div>
             </div>
           </div>
-          <h3
-            class="flex items-center justify-start font-normal text-[21px] leading-[1.38] font-NotoSans text-black text-right tracking-[0px] relative mt-[23px] mx-0 mb-0"
-          >
-            Loren 看了 鈴芽之旅 已觀看 15 %
+          <h3 id="reading_book_progress_profile_content" class="flex items-center justify-start font-normal text-[21px] leading-[1.38] font-NotoSans text-black text-right tracking-[0px] relative mt-[23px] mx-0 mb-0">
+            <!-- 自動加載 個人觀看書籍內容 -->
           </h3>
         </div>
         <div class="flex flex-col bg-cyan-200 rounded-3xl w-[86.73%] relative mt-[25px] mr-[4.25%] mb-0 ml-[9.02%]">
@@ -246,7 +244,7 @@
             <h3
               class="flex items-center font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px] relative shrink-0 basis-auto min-w-[29px]"
             >
-              8
+              6
             </h3>
           </div>
           <div class="basis-[38px]"></div>
@@ -262,7 +260,7 @@
             <h3
               class="flex items-center font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px] relative shrink-0 basis-auto min-w-[30px]"
             >
-              20
+              2
             </h3>
           </div>
           <div class="basis-12"></div>
@@ -277,7 +275,7 @@
             <h3 class="flex items-center relative shrink-0 basis-auto min-w-[103px]">
               <span class="font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px]">
                 <span class="not-italic text-[1em] leading-[1.38] font-NotoSans text-black tracking-[0px]">
-                  20 : 30 
+                  14 : 21 
                 </span>
                 <span class="not-italic text-[0.5714285714285714em] leading-[1.33] font-NotoSans text-black tracking-[0px]">
                   秒
@@ -297,18 +295,18 @@
             <div class="flex flex-col relative shrink-0 basis-[285px] min-w-[285px]">
               <div class="flex flex-col relative grow mt-0 mr-0 mb-0 ml-[9px]">
                 <div class="flex items-center font-normal text-[14px] leading-[1.35] font-NotoSans text-[rgb(30,30,30)] tracking-[0px] relative grow min-h-[28px]">
-                  Madison: 哇~ 太酷了吧
+                  Madison: 你看了這本書籍後，有什麼想法？
                 </div>
-                <button onclick=" window.open('https://www.instagram.com/','_blank')">
-                  <img
-                      src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/d1c6baef3b2416a3c0bbcf61c17c9cf2.png"
-                      alt="alt text"
-                      class="w-[15px] h-auto aspect-[1.25] align-top object-cover object-[center_center] absolute top-2 right-[96px]"
-                  />
-                </button>
               </div>
             </div>
           </div>
+          <button onclick=" window.open('https://www.instagram.com/','_blank')">
+            <img
+                src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/d1c6baef3b2416a3c0bbcf61c17c9cf2.png"
+                alt="alt text"
+                class=""
+            />
+          </button>
         </div>
       </div>
     </div>
