--- a/hosting/pages/readbook/readbook1.html
+++ b/hosting/pages/readbook/readbook1.html
@@ -11,75 +11,39 @@
 
     <!-- 載入 lib -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
-    <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script>
+    <script src="../../src/scripts/epub.js"></script>
+    <!-- <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script> -->
 
     <!-- load css -->
     <link href="../../src/style/readbook.css" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="https://futurepress.github.io/epub.js/examples/examples.css"> -->
-
-    
 </head>
-<body>
-<div id="container">
-    <div id="menu">
-        <ul class="hlist">
-            <li onclick="history.back()">
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/edd97a69e4ff29abb1e297d02a622138.png"/>
-            </li>
-            <li>
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/a91c7b56a00a1df962da29a5384f9bef.png"/>
-            </li>
-            <li>
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/9b4a1f3aa03dccbd3d640839f3d76bff.png"/>
-            </li>
-            <li>
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/2e2a1e3bd49283f69abe1b631b25e09f.png"/>
-            </li>
-            <li onclick=" window.open('https://www.instagram.com/','_blank')">
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/bf3150f12ad33d5c056ebf9e86235a4d.png"/>
-            </li>
-            <li>
-               <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/8eb39d3c1f0298cfb39474a9e9986cac.png"/>
-            </li>
-        </ul>
-    </div>
 
-    <!-- <div class="book">
-        <div id="pages" class="pages">
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00001.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00002.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00003.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00004.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00005.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00006.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00007.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00008.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00009.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00010.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00011.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00012.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00013.jpg')"></div>
-            <div class="page"
-                 style="background-image: url('https://res2.pubu.tw/docs/293621/3479/qjPUmDJj-300dpi-prvw-00014.jpg')"></div>
-        </div>
-    </div> -->
-    <!-- <object data="../../epub/鈴芽之旅.pdf" type="application/pdf" width="100%" height="1000px"></object> -->
-    <!-- <object data="../../epub/鈴芽之旅.epub" type="application/epub+zip" width="100%" height="600px"></object> -->
-    <!-- <iframe src="../../epub/鈴芽之旅.epub" width="100%" height="600px"></iframe> -->
-      <!-- <div id="title"></div> -->
+<body>
+  <div id="container">
+      <div id="menu">
+          <ul class="hlist">
+              <li onclick="history.back()" >
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/edd97a69e4ff29abb1e297d02a622138.png"/>
+              </li>
+              <li>
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/a91c7b56a00a1df962da29a5384f9bef.png"/>
+              </li>
+              <li>
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/9b4a1f3aa03dccbd3d640839f3d76bff.png"/>
+              </li>
+              <li>
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/2e2a1e3bd49283f69abe1b631b25e09f.png"/>
+              </li>
+              <li onclick=" window.open('https://www.instagram.com/','_blank')">
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/bf3150f12ad33d5c056ebf9e86235a4d.png"/>
+              </li>
+              <li>
+                <img src="https://storage.googleapis.com/pxcode-pro/644d82b70649a2000afe5491/assets/8eb39d3c1f0298cfb39474a9e9986cac.png"/>
+              </li>
+          </ul>
+      </div>
+  </div>
   <select id="toc"></select>
   <div id="viewer" class="spreads"></div>
   <a id="prev" href="#prev" class="arrow">⬅️</a>
@@ -93,9 +57,9 @@
     // Load the opf
     var book = ePub(url || "../../epub/鈴芽之旅.epub");
     var rendition = book.renderTo("viewer", {
-      width: "100%",
-      height: 600,
-     //  spread: "always"
+      width: "95%", 
+      height: "95%",
+      spread: "always",
     });
 
     rendition.display(currentSectionIndex);
