--- a/hosting/pages/readbook/readbook3.html
+++ b/hosting/pages/readbook/readbook3.html
@@ -11,8 +11,7 @@
 
     <!-- 載入 lib -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
-    <script src="../../src/scripts/epub.js"></script>
-    <!-- <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script> -->
+    <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script>
 
     <!-- load css -->
     <link href="../../src/style/readbook.css" rel="stylesheet">
