--- a/hosting/pages/readbook/index.html
+++ b/hosting/pages/readbook/index.html
@@ -11,8 +11,7 @@
 
     <!-- 載入 lib -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
-    <script src="../../src/scripts/epub.js"></script>
-    <!-- <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script> -->
+    <script src="https://futurepress.github.io/epub.js/dist/epub.js"></script>
 
     <!-- load css -->
     <link href="../../src/style/readbook.css" rel="stylesheet">
@@ -57,8 +56,8 @@
     // Load the opf
     var book = ePub(url || "../../epub/鈴芽之旅.epub");
     var rendition = book.renderTo("viewer", {
-      width: "90%", 
-      height: "90%",
+      width: "95%", 
+      height: "95%",
       spread: "always",
     });
 
@@ -182,5 +181,3 @@
   </script>
 </body>
 </html>
-
-  
