--- a/hosting/pages/Profile/index.html
+++ b/hosting/pages/Profile/index.html
@@ -174,14 +174,15 @@
       <div class="flex flex-col w-[82.55%] relative grow mt-[37.5px] mr-[12.45%] mb-[22.5px] ml-[5%]">
         <div class="flex flex-col w-[85.95%] relative mt-0 mr-[14.05%] mb-0 ml-0">
           <div class="flex items-center relative">
-            <div id="reading_book_progress_profile_picture" class="flex flex-col relative basis-12">
+            <div id="reading_book_progress_profile_picture">
               <!-- 自動加載 個人頭像 -->
             </div>
             <div class="basis-[22px]"></div>
             <div class="flex flex-col relative basis-[167px]">
-              <h3 id="reading_book_progress_profile_name" class="flex items-center font-normal text-[21px] leading-[1.38] font-NotoSans text-black tracking-[0px] relative">
-                <!-- 自動加載 個人名字 -->
-              </h3>
+              <div id="reading_book_progress_profile_name">
+                  <!-- 自動加載 個人名字 -->
+              </div>
+
               <div
                 class="flex items-center font-normal text-[14px] leading-[1.35] font-NotoSans text-black tracking-[0px] relative mt-[2.5px] mx-0 mb-0"
               >
@@ -189,9 +190,9 @@
               </div>
             </div>
           </div>
-          <h3 id="reading_book_progress_profile_content" class="flex items-center justify-start font-normal text-[21px] leading-[1.38] font-NotoSans text-black text-right tracking-[0px] relative mt-[23px] mx-0 mb-0">
-            <!-- 自動加載 個人觀看書籍內容 -->
-          </h3>
+          <div  id="reading_book_progress_profile_content">
+              <!-- 自動加載 個人觀看書籍內容 -->
+          </div>
         </div>
         <div class="flex flex-col bg-cyan-200 rounded-3xl w-[86.73%] relative mt-[25px] mr-[4.25%] mb-0 ml-[9.02%]">
           <div class="flex items-center relative grow mt-7 mr-[19px] mb-4 ml-6">
